Fix footer spacing

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -306,7 +306,7 @@ footer {
     color: $highlight-color;
     text-decoration: underline;
   }
-  p.copyright {
+  p#copyright {
     padding-left: 2em;
   }
 }
